--- a/Traffic_Time_Series_Analysis.ipynb
+++ b/Traffic_Time_Series_Analysis.ipynb
@@ -31,7 +31,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Checking for Stationarity"
+        "## Checking for Stationarity\n",
+        "Trend, cyclic, seasonal, irregularity"
       ],
       "metadata": {
         "id": "IUlaHAZaAxZ9"
